# LetsShill

./: README.md  astratest.py  forms.py  home.html  index.html  login.html  main.py  pyproject.toml  signup.html
js/: login.js  signup.js
static/: form.css  home.css  nav.css  style.css
templates/: home.html  index.html  layout.html  signin.html  signup.html
