[tool.poetry]
name = "repl_python3_LetsShill"
version = "0.1.0"
description = ""
authors = ["neeltron <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
WTForms = "^2.3.3"
Flask-WTF = "^0.15.1"
email-validator = "^1.1.3"
cassandra-driver = "^3.25.0"
Flask-Session = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
